--- a/src/pomodoro/style.scss
+++ b/src/pomodoro/style.scss
@@ -67,7 +67,9 @@
             position: absolute;
             top: 0;
             right: 0;
-            cursor: pointer;
+            cursor: pointer;    
+            background: transparent;
+            border: 0;
         }
         .bg{
             position: absolute;
