--- a/src/pomodoro/style.scss
+++ b/src/pomodoro/style.scss
@@ -242,6 +242,7 @@
         color: #313131;
         margin: 25px 0;
         a{
+            color: #673ab7;
             &:hover{
                 color: #009688;
             }
