--- a/src/pomodoro/style.scss
+++ b/src/pomodoro/style.scss
@@ -40,6 +40,8 @@
             font-family: 'Sniglet', cursive;
             border-radius: 50px;
             cursor: pointer;
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-tap-highlight-color: transparent;
             &.active{
                 border: 1px solid #009688;
                 color: #009688;
@@ -68,6 +70,8 @@
             top: 0;
             right: 0;
             cursor: pointer;    
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-tap-highlight-color: transparent;
             background: transparent;
             border: 0;
         }
@@ -118,12 +122,16 @@
                 height: 200px;
                 background: #fff;
                 cursor: pointer;  
+                -webkit-tap-highlight-color: rgba(0,0,0,0);
+                -webkit-tap-highlight-color: transparent;
                 z-index: 99; 
                 .timer{
                     position: relative;
                     text-align: center;
                     font-size: 3.25rem;
                     cursor: pointer; 
+                    -webkit-tap-highlight-color: rgba(0,0,0,0);
+                    -webkit-tap-highlight-color: transparent;
                     font-family: 'Poppins', sans-serif;   
                     margin-bottom: 0;
                 }
@@ -132,6 +140,8 @@
                     margin: 5px auto;
                     text-transform: uppercase;
                     cursor: pointer;
+                    -webkit-tap-highlight-color: rgba(0,0,0,0);
+                    -webkit-tap-highlight-color: transparent;
                 }
                 &:hover{
                     box-shadow: inset 0 0 2px 0 #521b17;
@@ -183,6 +193,8 @@
                         line-height: 0;
                         padding: 0;
                         cursor: pointer;
+                        -webkit-tap-highlight-color: rgba(0,0,0,0);
+                        -webkit-tap-highlight-color: transparent;
                         &:hover{
                             border: 1px solid #ed687e;
                             background: #ed687e;
@@ -206,6 +218,8 @@
             text-transform: uppercase;
             font-size: 0.75rem;
             cursor: pointer;
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-tap-highlight-color: transparent;
             font-family: 'Sniglet', cursive;
             &:hover{
                 font-weight: 900;
@@ -261,6 +275,8 @@
             text-transform: uppercase;
             font-size: 0.75rem;
             cursor: pointer;
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -webkit-tap-highlight-color: transparent;
             font-family: 'Sniglet', cursive;
             &:hover{
                 font-weight: 900;
