--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 .App{
     background: #fff;
-    height: 100vh;
+    height: auto;
     width: 100%;
     display: flex;
+    overflow-x: hidden;
 }
