--- a/src/pomodoro/style.scss
+++ b/src/pomodoro/style.scss
@@ -143,9 +143,9 @@
                     -webkit-tap-highlight-color: rgba(0,0,0,0);
                     -webkit-tap-highlight-color: transparent;
                 }
-                &:hover{
-                    box-shadow: inset 0 0 2px 0 #521b17;
-                } 
+                &.on{
+                    box-shadow: 0 0 3px 0 #521b17;
+                }
             }
         }
     }
