--- a/src/pomodoro/style.scss
+++ b/src/pomodoro/style.scss
@@ -20,7 +20,7 @@
         text-align: center;
         font-family: 'Sniglet', cursive;
         border-bottom: 1px solid #eee;
-        color: #e91e63;
+        color: #ee3d57;
     }
     .menu{
         display: flex;
@@ -65,7 +65,6 @@
                 width: 290px;
                 height: 290px;
                 background: linear-gradient(45deg, #9c27b070, #f4433636);
-                opacity: 0.8;
                 z-index: 1;
                 &.animate{
                     animation: bubble-2 12s linear infinite forwards;
@@ -77,7 +76,7 @@
             &.three{
                 width: 260px;
                 height: 260px;
-                background: linear-gradient(45deg, #f44336, #e91e63);
+                background: linear-gradient(45deg, #f44336, #ee3d57);
                 opacity: 0.5;
                 z-index: 9;
                 &.animate{
@@ -146,7 +145,7 @@
                     font-size: 0.825rem;
                     margin-bottom: 15px;
                     text-transform: uppercase;
-                    color: #e91e63;
+                    color: #ee3d57;
                 }
                 .setter{
                     display: flex;
@@ -157,7 +156,7 @@
                         padding: 0 5px;
                         align-self: center;
                         text-align: center;
-                        color: #e91e63;
+                        color: #ee3d57;
                     }
                     button{    
                         display: block;
@@ -186,6 +185,11 @@
         }
         .primary-btn{
             margin-top: 15px;
+            &:hover{
+                border: 1px solid #ee3d57;
+                background: #ee3d57;
+                color: #fff;
+            }
         }
         .confirmation{
             font-size: 1rem;
@@ -257,11 +261,11 @@
     }
     .primary-btn{
         background: #fff;
-        border: 1px solid #e91e63;
+        border: 1px solid #ee3d57;
         outline: 0;
         padding: 5px;
         width: 30%;
-        color: #e91e63;
+        color: #ee3d57;
         text-align: center;
         text-transform: uppercase;
         font-size: 0.825rem;
@@ -274,12 +278,13 @@
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         -webkit-tap-highlight-color: transparent;
         &.active{
-            border: 1px solid #009688;
-            color: #009688;
+            border: 1px solid #ee3d57;
+            background: #ee3d57;
+            color: #fff;
             &:hover{
-                border: 1px solid #009688;
-                color: #009688;
-                background: #fff;
+                border: 1px solid #ee3d57;
+                background: #ee3d57;
+                color: #fff;
             }
         }
         &:hover{
